# mpc_robot

./: CMakeLists.txt  package.xml
include/: mpc_node.hpp  mynlp.hpp  mynlp_fd.hpp  mynlp_ms.hpp  mynlp_ss.hpp  old_mynlp.hpp
launch/: mpc_2_robots.launch  oc.launch
src/: mpc_main.cpp  mpc_node.cpp  mynlp.cpp  mynlp_fd.cpp  mynlp_fd_rk4.cpp  mynlp_ms.cpp  mynlp_ss.cpp  mynlp_ss_rk4.cpp  oc_main.cpp  old_mynlp.cpp
